--- a/src/gui/ui/overviewframe.ui
+++ b/src/gui/ui/overviewframe.ui
@@ -125,7 +125,7 @@
       <item row="1" column="0">
        <widget class="QLabel" name="label_2">
         <property name="text">
-         <string>Saldo:</string>
+         <string>Balance:</string>
         </property>
        </widget>
       </item>
